--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         </activity>
         <activity
             android:name=".AboutActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/activity_about" />
+        <activity
+            android:name=".SettingsActivity"
+            android:theme="@style/AppTheme"
             android:label="@string/activity_about" />
     </application>
 
