--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".MainActivity">
@@ -18,12 +17,13 @@
         </activity>
         <activity
             android:name=".AboutActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/activity_about" />
+            android:label="@string/activity_about"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".SettingsActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/activity_about" />
+            android:label="@string/activity_about"
+            android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
