--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
             android:name=".SettingsActivity"
             android:label="@string/activity_about"
             android:theme="@style/AppTheme" />
-
+        <activity android:name=".SetTimeActivity"
+            android:label="在以下时间后停止播放"
+            android:theme="@style/Dialog"></activity>
     </application>
 
 </manifest>
