--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,8 @@ android {
         versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         // Java 8
-        jackOptions.enabled = true
+        android.compileOptions.sourceCompatibility 1.8
+        android.compileOptions.targetCompatibility 1.8
     }
     compileOptions {
         // Java 8
