--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:launchMode="singleTop"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -28,18 +28,17 @@
             android:name=".SetTimeActivity"
             android:label="@string/activity_stop_timer"
             android:theme="@style/Dialog" />
-
         <activity
             android:name=".noise.DetailViewActivity"
-            android:theme="@style/AppTheme.NoActionBar_StatusBar"
-            android:label="@string/activity_detail_view"/>
+            android:label="@string/activity_detail_view"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <service
             android:name=".service.BackgroundService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
-
+        <activity android:name=".RestartActivity"></activity>
     </application>
 
 </manifest>
