--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.canwdev.noise">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -40,7 +41,12 @@
             android:name=".service.BackgroundService"
             android:enabled="true"
             android:exported="true" />
-        <activity android:name=".RestartActivity"></activity>
+
+        <activity android:name=".RestartActivity" />
+        <activity
+            android:name=".TroubleMakerActivity"
+            android:label="@string/activity_trouble_maker"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
